<?xml version="1.0"?>
<package format="3">
  <name>kratos_vahitha</name>
  <version>0.0.0</version>
  <description>Week 3 assignment package for ROS2</description>
  <maintainer email="your_email@example.com">vahitha</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Other runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- This is REQUIRED for packages with msg/srv -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


